--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <h1 class="text-3xl font-bold text-white drop-shadow-md">
                         <i class="fas fa-gift mr-2 floating"></i> Raspadinha de Bônus
                     </h1>
-                    <p class="text-yellow-100 mt-2">Raspe e ganhe um bônus exclusivo para depositar na BabyWyn!</p>
+                    <p class="text-yellow-100 mt-2">Raspe e ganhe um bônus exclusivo para depositar na IcebetPro!</p>
                 </div>
             </div>
             
