--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             });
             
             // Go to BabyWyn button click handler
-            goToIcebetproBtn.addEventListener('click', function() {
+            goToBabywynBtn.addEventListener('click', function() {
                 // Redirect to babywyn.com
                 window.location.href = 'https://icebetpro.com';
             });
